--- a/style.css
+++ b/style.css
@@ -58,26 +58,58 @@ body{
 #msg{
     color:#ffffc7;
     font-size: 8vmin;
+   
 }
-.msg-container{
-    height: 100vmin;
-    display:flex;
+.msg-container {
+    height: 7rem;
+    font-size: 2rem;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #001f30;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap:4rem;
 }
-.hide{
+/* .hide{
     display: none;
-}
+} */
 
-.neww:hover{
-    box-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
-    border-radius: 1rem;
-}
 
-.hello:hover{
+
+.reset:hover{
     box-shadow: 0 0 10px #e84548, 0 0 20px #dc3842, 0 0 30px #da3047;
     border-radius: 1rem;
+    
+}
+
+@media(max-width:500px){
+    h1{
+        margin-top: 1cm;
+    }
+    .msg-container {
+        margin-top: 1cm;
+        font-size: 1rem;
+        font-family: sans-serif;
+        font-weight: 500;
+    }
+
+    #msg{
+        color:#ffffc7;
+        font-size: 6vmin;
+    }
+    #new-btn{
+        margin-top:1cm;
+    }
+    
+    .game {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70%;
+        width: 70%;
+        gap: 0.8rem;
+    }
+    
     
 }
